compiler/e2e/test/snapshot/borrow_checker/do_effect_invalidation/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: access is done while it is mutably borrowed
  ╭─ compiler/e2e/test/snapshot/borrow_checker/do_effect_invalidation/main.pnx:7:19
  │
6 │     Test::takeMut(x)
  │                   - the mutable borrow starts here
7 │     Test::takeMut(x) # This should error because `x` is borrowed as mutable already
  │                   ^ access occurs here while it is mutably borrowed
  │
  = lifetime(s) 'a can access the borrow later

error: Compilation aborted due to 1 error(s)



stdout:
